tree-sitter-crowdcontrol/test/corpus/basic.txt
================================================================
simple forbid rule
================================================================

forbid "no-interns" {
  user.role == "intern"
  message "no interns"
}

----

(source_file
  (rule
    kind: (rule_kind)
    name: (string)
    (condition
      (field_condition
        lhs: (field_path
          (identifier)
          (identifier))
        (cmp_op)
        rhs: (string)))
    (message_clause
      template: (string))))

================================================================
rule with metadata
================================================================

forbid "example" {
  description "A description"
  owner       "team-a"
  link        "https://example.com"
  user.role == "admin"
}

----

(source_file
  (rule
    kind: (rule_kind)
    name: (string)
    (metadata_clause
      value: (string))
    (metadata_clause
      value: (string))
    (metadata_clause
      value: (string))
    (condition
      (field_condition
        lhs: (field_path
          (identifier)
          (identifier))
        (cmp_op)
        rhs: (string)))))

================================================================
unless clause
================================================================

forbid "no-interns" {
  user.role == "intern"
  unless user.groups contains "on-call"
}

----

(source_file
  (rule
    kind: (rule_kind)
    name: (string)
    (condition
      (field_condition
        lhs: (field_path (identifier) (identifier))
        (cmp_op)
        rhs: (string)))
    (unless_clause
      condition: (condition
        (field_condition
          lhs: (field_path (identifier) (identifier))
          (cmp_op)
          rhs: (string))))))

================================================================
count() aggregate as field condition
================================================================

forbid "blast-radius" {
  count(plan.destroys) > 5
}

----

(source_file
  (rule
    kind: (rule_kind)
    name: (string)
    (condition
      (field_condition
        lhs: (call_expression
          (field_path
            (identifier)
            (identifier)))
        (cmp_op)
        rhs: (number)))))

================================================================
quantifier
================================================================

forbid "infra" {
  any pr.changed_files matches "infra/*"
}

----

(source_file
  (rule
    kind: (rule_kind)
    name: (string)
    (condition
      (quantifier_condition
        list: (field_path (identifier) (identifier))
        (predicate
          (cmp_op)
          (string))))))

================================================================
comments
================================================================

# hash comment
// slash comment
forbid "x" {
  # inline hash
  user.role == "admin"  // trailing slash
}

----

(source_file
  (comment)
  (comment)
  (rule
    kind: (rule_kind)
    name: (string)
    (comment)
    (condition
      (field_condition
        lhs: (field_path (identifier) (identifier))
        (cmp_op)
        rhs: (string)))
    (comment)))
